--- a/Campus Inc.ipynb
+++ b/Campus Inc.ipynb
@@ -69,13 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
@@ -202,6 +195,152 @@
     "mask = (df_cases['day']== '2020-01-01') | (df_cases['day']== '2020-02-01') | (df_cases['day']== '2020-03-01') | (df_cases['day']== '2020-04-01') | (df_cases['day']== '2020-05-01') | (df_cases['day']== '2020-06-01')\n",
     "df_cases_day = df_cases[mask].reset_index(drop=True)\n",
     "df_cases_day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-17T00:53:45.910659Z",
+     "start_time": "2020-07-17T00:53:45.894701Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>active_cases</th>\n",
+       "      <th>total_cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>538</td>\n",
+       "      <td>555</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>636</td>\n",
+       "      <td>654</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>915</td>\n",
+       "      <td>941</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>1392</td>\n",
+       "      <td>1434</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>2020-07-12</td>\n",
+       "      <td>4916159</td>\n",
+       "      <td>13106689</td>\n",
+       "      <td>571823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>2020-07-13</td>\n",
+       "      <td>4951183</td>\n",
+       "      <td>13309624</td>\n",
+       "      <td>575824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>2020-07-14</td>\n",
+       "      <td>4989334</td>\n",
+       "      <td>13529076</td>\n",
+       "      <td>581109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>2020-07-15</td>\n",
+       "      <td>5035184</td>\n",
+       "      <td>13752395</td>\n",
+       "      <td>586843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>2020-07-16</td>\n",
+       "      <td>5082850</td>\n",
+       "      <td>13970112</td>\n",
+       "      <td>591998</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>178 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            day  active_cases  total_cases  deaths\n",
+       "0    2020-01-21             0            0       0\n",
+       "1    2020-01-22           538          555      17\n",
+       "2    2020-01-23           636          654      18\n",
+       "3    2020-01-24           915          941      26\n",
+       "4    2020-01-25          1392         1434      42\n",
+       "..          ...           ...          ...     ...\n",
+       "173  2020-07-12       4916159     13106689  571823\n",
+       "174  2020-07-13       4951183     13309624  575824\n",
+       "175  2020-07-14       4989334     13529076  581109\n",
+       "176  2020-07-15       5035184     13752395  586843\n",
+       "177  2020-07-16       5082850     13970112  591998\n",
+       "\n",
+       "[178 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cases"
    ]
   },
   {
